fix(hero): photo size on mobile

--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -2,87 +2,59 @@
 @use 'styles/abstracts/mixins' as mixins;
 
 .hero {
-  .heading {
-    filter: drop-shadow(-2px 0px 10px rgba(0, 0, 0, 0.5));
+  padding-top: 0;
 
-    @media screen and (min-width: vars.$md) {
-      filter: none;
-    }
+  @media screen and (min-width: vars.$md) {
+    padding-top: 5rem;
+  }
 
-    &__line {
-      display: block;
-      font-size: 5.5vw;
-      font-weight: 800;
-      text-align: center;
+  .text {
+    @include mixins.flex(center, flex-start, column);
+    gap: 2.25rem;
+
+    .heading {
+      filter: drop-shadow(-2px 0px 10px rgba(0, 0, 0, 0.5));
 
       @media screen and (min-width: vars.$md) {
-        text-align: left;
+        filter: none;
       }
 
-      @media screen and (min-width: vars.$xl) {
-        font-size: 3.5rem;
-      }
+      &__line {
+        display: block;
+        font-size: 5.5vw;
+        font-weight: 800;
+        text-align: center;
 
-      @media screen and (min-width: vars.$xxl) {
-        font-size: 4.5rem;
-      }
-
-      &--bigger {
-        font-size: 13vw;
+        @media screen and (min-width: vars.$md) {
+          text-align: left;
+        }
 
         @media screen and (min-width: vars.$xl) {
-          font-size: 9rem;
+          font-size: 3.5rem;
         }
 
         @media screen and (min-width: vars.$xxl) {
-          font-size: 10rem;
+          font-size: 4.5rem;
         }
-      }
-    }
-  }
 
-  .scrollDown {
-    margin-top: 2.25rem;
-    @include mixins.flex(center, center, row);
-    gap: 1rem;
-    filter: drop-shadow(-2px 0px 10px rgba(0, 0, 0, 0.5));
+        &--bigger {
+          font-size: 13vw;
 
-    @media screen and (min-width: vars.$md) {
-      @include mixins.flex(flex-start, center, row);
-      filter: none;
-    }
+          @media screen and (min-width: vars.$xl) {
+            font-size: 9rem;
+          }
 
-    .scrollAnimation {
-      width: 1.25rem;
-      height: 2rem;
-      border: 2px solid vars.$color-white;
-      border-radius: 0.625rem;
-      @include mixins.flex(center, center, row);
-
-      &__dot {
-        width: 0.25rem;
-        height: 0.25rem;
-        border-radius: 100%;
-        background: vars.$color-white;
-        z-index: -1;
-      }
-    }
-
-    &__text {
-      font-size: 0.75rem;
-
-      @media screen and (min-width: vars.$xxs) {
-        font-size: 1rem;
+          @media screen and (min-width: vars.$xxl) {
+            font-size: 10rem;
+          }
+        }
       }
     }
   }
 
   .heroImage {
-    width: 44.4rem;
-    height: 55.4rem;
-    padding: 1.5px;
     position: absolute;
-    left: -18rem;
+    left: -16rem;
     user-select: none;
     z-index: -2;
 
@@ -98,7 +70,8 @@
       height: 2px;
       border-radius: 2px;
       position: absolute;
-      bottom: 0;
+      left: 0;
+      bottom: 4px;
       background: vars.$color-primary;
     }
 
